# ALENEX24-partial-coverage-path-planning

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example.ipynb  example_algorithm_steps.ipynb
experiments/01_grid/: 01_solve_instances.py  01b_prepare.py  02_check_for_one_instance.ipynb  03_compare_deviation_of_grids.ipynb  04_compare_best_of_grid.ipynb  05_best_vs_worst_aligned_grid.ipynb  06_give_instane_overview.ipynb  07_very_bad_example.ipynb  08_alignment_heuristic.ipynb
experiments/01_grid/aemeasure/: measurement.py
experiments/01_grid/instances/: 0.instance.json  1.instance.json  10.instance.json  100.instance.json  101.instance.json  102.instance.json  103.instance.json  104.instance.json  105.instance.json  106.instance.json  107.instance.json  108.instance.json  109.instance.json  11.instance.json  110.instance.json  111.instance.json  112.instance.json  113.instance.json  114.instance.json  115.instance.json  116.instance.json  117.instance.json  118.instance.json  119.instance.json  12.instance.json  120.instance.json  121.instance.json  122.instance.json  123.instance.json  124.instance.json  125.instance.json  126.instance.json  127.instance.json  128.instance.json  129.instance.json  13.instance.json  130.instance.json  131.instance.json  132.instance.json  133.instance.json  (+160 more)
experiments/02_algorithm_explanation/: 01_generating_instance.ipynb  02_grids.ipynb  03_vertex_values.ipynb  04_fractional.ipynb  05_atomic_strips.ipynb  05b_atomic_strip_selection_details.ipynb  06_matching.ipynb  07_simple_merging.ipynb  08_pcst_merging.ipynb  09_redundant_opt.ipynb  10_local_cycle_cover_optimization.ipynb  11_tour_optimization.ipynb
experiments/03_grids_in _detail/: 01b_instance.json  01c_instance.json  01d_instance.json  01e_instance.json  02_grids.ipynb  03_polygon_simplification.ipynb  04_smoothing.ipynb  05_offset_grid.ipynb  07_solve_full_coverage_grids.py  08_check_for_one_instance.ipynb  09_density_problem.ipynb  10_grid_comparison.ipynb  11_best_instances_for_grid.ipynb  _utils.py
experiments/03_grids_in _detail/aemeasure/: context_printer.py
experiments/04_finding_default_configuration_for_experiments/: 01_first_instance.ipynb
experiments/05_partial_coverage/: 00_create_instances.ipynb  02_solve.py  03_debugging.ipynb  03_debugging.py  04__prepare.py  04_first_comparison.ipynb  05_solutions.ipynb  06__prepare.py  06_comparison_for_full.ipynb  07_solutions_full.ipynb  08_comparison_for_full_bad.ipynb
experiments/05_partial_coverage/aemeasure/: __init__.py
experiments/06_optimizations/: 00_solve_integralization.py  00b_prepare.py  01_evaluation.ipynb  02_solve_opt_steps.py  02b_prepare.py  03_evaluation.ipynb  04_solve_integralization_without_further_opt.py  05_evaluation.ipynb  06_run_grid_solution_quality_partial.py  06b_prepare.py  07_evaluation.ipynb  07b_examples.ipynb  08_run_grid_solution_quality_full.py  09_evaluation.ipynb  10_solve_opt_area.py  10b_prepare.py  11_evaluation.ipynb  12_solve_opt_steps_full.py  12b_prepare.py  13_evaluation.ipynb
experiments/rotation_experiments/: 00_collect_data.ipynb  README.md  evaluation.ipynb  run_new.py
src/pcpptc/: __init__.py
(+125 files in other folders)
